--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,23 @@
+# Elixir CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-elixir/ for more details
 version: 2
-jobs: 
+jobs:
   build:
     docker:
-      - image: circleci/elixir:1.6
+      # specify the version here
+      - image: circleci/elixir:1.4
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/mox_guide
     steps:
       - checkout
-      - run: IO.inspect "A first hello"
+
+      # specify any bash command here prefixed with `run: `
+      - run: mix deps.get
+      - run: mix ecto.create
+      - run: mix test
