--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: mix deps.get
-      - run: mix ecto.create
-      - run: mix test
+      # - run: mix local.hex --force
+      # - run: mix deps.get
+      # - run: mix ecto.create
+      # - run: mix test
+      - run IO.inspect "Hello world"
