--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,19 @@
 version: 2
 jobs:
   build:
+    parallelism: 1 
     docker:
       # specify the version here
-      - image: circleci/elixir:1.4
+      - image: circleci/elixir:1.7.3
+        environment:
+          MIX_ENV: test
+  
+      - image: circleci/postgres:10.1-alpine
+        environment:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: mox_guide_test
+          POSTGRES_PASSWORD: postgres
+ 
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -14,12 +24,52 @@ jobs:
       # - image: circleci/postgres:9.4
 
     working_directory: ~/mox_guide
+
     steps:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      # - run: mix local.hex --force
-      # - run: mix deps.get
-      # - run: mix ecto.create
-      # - run: mix test
-      - run IO.inspect "Hello world"
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:   #restores saved mix caches
+          keys:
+            - v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock"}}
+            - v1-mix-cache-{{ .Branch }}
+            - v1-mix-cache
+      
+      - restore_cache:
+          keys:
+            - v1-build-cache-{{ .Branch }}
+            - v1-build-cache
+    
+      - run: mix do deps.get, compile  # get updated dependencies & compile them
+      
+      - save_cache:  # generate and store mix cache
+          key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          paths: "deps"
+      - save_cache:  # make another, less specific cache
+          key: v1-mix-cache-{{ .Branch }}
+          paths: "deps"
+      - save_cache:  # you should really save one more cache (just in case)
+          key: v1-mix-cache
+          paths: "deps"
+      - save_cache: # don't forget to save a *build* cache, too
+          key: v1-build-cache-{{ .Branch }}
+          paths: "_build"
+      - save_cache: # and one more build cache for good measure
+          key: v1-build-cache
+          paths: "_build"
+     
+       - run:  # special utility that stalls main process until DB is ready
+          name: Wait for DB
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+
+     
+      - run: mix ecto.create
+      - run: mix test    #run all tests in project
+
+      # Upload test results
+      - store_test_results:
+          path: build/test/lib/mox_guide 
+
